# narabi

./: CLAUDE.md  Cargo.toml  README.md  flake.nix
src/: buffers.rs  lib.rs  render.rs  theme.rs
