[package]
name = "narabi"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Narabi (並び) — buffer and tab line for Neovim with LSP diagnostics indicators"
homepage = "https://github.com/pleme-io/narabi"
repository = "https://github.com/pleme-io/narabi"
readme = "README.md"
license = "MIT"
categories = ["text-editors"]
keywords = ["neovim", "bufferline", "tabline", "ui"]

[lib]
crate-type = ["cdylib", "rlib"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
nvim-oxi = { version = "0.6", features = ["neovim-0-11"] }
tane = "0.1"
kamon = "0.1"
